correct white colors contrast

--- a/Kitty/roku.conf
+++ b/Kitty/roku.conf
@@ -1,4 +1,4 @@
-foreground #d3ccc0
+foreground #e7c9b3
 background #161919
 url_color #85d3d3
 
@@ -31,5 +31,5 @@ color6 #60a5a5
 color14 #85d3d3
 
 # white
-color7 #d3ccc0
-color15 #f2e6d5
+color7 #e7c9b3
+color15 #f0f1f1
