--- a/Windows Terminal/settings.json
+++ b/Windows Terminal/settings.json
@@ -9,17 +9,17 @@
 		"brightGreen": "#5BAC7D",
 		"brightPurple": "#C58FD6",
 		"brightRed": "#E27168",
-		"brightWhite": "#F0E9DF",
+		"brightWhite": "#F0F1F1",
 		"brightYellow": "#CDAA77",
-		"cursorColor": "#D3CCC0",
+		"cursorColor": "#e7c9b3",
 		"cyan": "#60A5A5",
-		"foreground": "#D3CCC0",
+		"foreground": "#e7c9b3",
 		"green": "#237B53",
 		"name": "roku",
 		"purple": "#85678F",
 		"red": "#C95046",
-		"selectionBackground": "#D3CCC0",
-		"white": "#D3CCC0",
+		"selectionBackground": "#e7c9b3",
+		"white": "#e7c9b3",
 		"yellow": "#D9A36C"
 	},
 ]
